stopping point - good on browser, not perfect on mobile

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -144,6 +144,7 @@ figcaption {
 }
 .locations-container {
     display: inline-flex;
+    flex-wrap: wrap;
     margin-top: 15px;
   
 }
